# Bookstore

./: .gitignore  Dockerfile  chave.py  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: workflow-pr.yml
bookstore/: settings.py  urls.py  wsgi.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  django-admin.py
order/: factories.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: factories.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: product_serializer.py
product/test_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
